# data-processing-benchmarks

./: .gitignore  .pre-commit-config.yaml  data_testing.ipynb  pyproject.toml  readme.md  requirements.txt
.github/workflows/: main.yaml
src/data_processing_benchmarks/: const.py  pandas.py  polars.py
test/: test_performance.py
