[tool.poetry]
name = "data-processing"
version = "0.1.0"
description = ""
authors = ["Toby Devlin <toby@tobydevlin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
polars = "^0.16.2"
pyarrow = "^11.0.0"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.6.3"
jupyter = "^1.0.0"
ipython-memory-magics = "^0.3.7"
black = "^23.1.0"
pre-commit = "^3.0.4"


[tool.poetry.group.ci.dependencies]
pytest-benchmark = "^4.0.0"
pytest = "^7.2.1"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "-ra -v --benchmark-autosave --benchmark-save-data --benchmark-cprofile=tottime"
testpaths = ["test"]
pythonpath = ["src"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
